# swat

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  README.md  TAlm.cxx  TAlm.h  TAnalysis.cxx  TAnalysis.h  TAuxFunc.cxx  TAuxFunc.h  TCoeffInfo.cxx  TCoeffInfo.h  TCorrSelector.cxx  TCorrSelectorCRPropa.cxx  TCorrSelectorCRPropa.h  TCounter.cxx  TCounter.h  TDKernel.cxx  TDKernel.h  TEulerAngle.h  TFFTWAlloc.h  THealpixMap.cxx  TMapSelector.cxx  TMapSelectorCRPropa.cxx  TParser.cxx  TParser.h  TSFunc.cxx  TSkyMap.cxx  TSkyMap.h  TSlm.cxx  TSmallWignerd.cxx  TSourcesFinder.cxx  TSourcesFinder.h  TSwatB.cxx  TSwatB.h  TSwatF.cxx  (+29 more)
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
config/: load.C.in
doc/: swatguide.tex
healpix/inc/: Healpix_Map.h
healpix/src/: alm_map_tools.cc  healpix_base.cc
libs/: TAlm.cxx  TAnalysis.cxx  TAngDistance.cxx  TAuxFunc.cxx  TCoeffInfo.cxx  TCorrSelector.cxx  TCorrSelectorCRPropa.cxx  TCounter.cxx  TCounterCRPropa.cxx  TDKernel.cxx  TEulerAngle.cxx  THealpixMap.cxx  TMapSelector.cxx  TMapSelectorCRPropa.cxx  TSFunc.cxx  TShift.cxx  TSkyMap.cxx  TSlm.cxx  TSmallWignerd.cxx  TSourcesFinder.cxx  TSphHarmB.cxx  TSphHarmF.cxx  TSwatB.cxx  TSwatF.cxx  TVMap.cxx  TWavMap.cxx  TWavelet.cxx  TWignerd.cxx  swat.cxx  swat_alm.cxx  swat_coverage.cxx  swat_find.cxx  swat_gen.cxx  swat_kernel.cxx  swat_prob.cxx  swat_sf_dump.cxx  swat_sim.cxx  swat_sph_dump.cxx  swat_wav_dump.cxx
libs/healpix/: fftpack.c  healpix_base.cc  ls_fft.c
macros/: DrawLatitudesLongitudes.C  add_background.C  benchmark_fft_gsl.C  convert_auger.C  convert_herald.C  graph_view.C  kernel.C  mais.C  makehtml.C  mystyle.C  read_rafael.C  scale_func.C  show_angles.C  sph_harm.C  swat.C  wav_view.C  wig_graph.C
pgfplots/: corr_graph.tex  cprob.tex  kernel.tex  multiplicity.tex  sf.tex  wprob.tex
swat/: TAlm.h  TCoeffInfo.h  TCounter.h  TCounterCRPropa.h  TDKernel.h  TEulerAngle.h  TMapSelectorCRPropa.h  TSFunc.h  TSphHarmB.h  TSwatF.h  TVMap.h
swat/inc/: TAlm.h  TAuxFunc.h  TCoeffInfo.h  TCorrSelector.h  TDKernel.h  TEulerAngle.h  THealpixMap.h  TMapSelector.h  TSFunc.h  TShift.h  TSlm.h  TSmallWignerd.h  TSourcesFinder.h  TSphHarmF.h  TStripeAnalysis.h  TVMap.h  TWavMap.h  TWavelet.h  TWignerd.h  swat.h
swat/libs/: TAlm.cxx  TAnalysis.cxx  TAngDistance.cxx  TAuxFunc.cxx  TCoeffInfo.cxx  TCorrSelector.cxx  TCorrSelectorCRPropa.cxx  TCounter.cxx  TCounterCRPropa.cxx  TDKernel.cxx  TEulerAngle.cxx  THealpixMap.cxx  TMapSelector.cxx  TMapSelectorCRPropa.cxx  TSFunc.cxx  TShift.cxx  TSkyMap.cxx  TSlm.cxx  TSmallWignerd.cxx  TSourcesFinder.cxx  TSphHarmB.cxx  TSphHarmF.cxx  TSwatB.cxx  TSwatF.cxx  TVMap.cxx  TWavMap.cxx  TWavelet.cxx  TWignerd.cxx  swat.cxx  swat_alm.cxx  swat_coverage.cxx  swat_find.cxx  swat_gen.cxx  swat_kernel.cxx  swat_sf_dump.cxx  swat_sim.cxx  swat_sph_dump.cxx  swat_wav_dump.cxx
swat/libs/healpix/: alm_healpix_tools.cc  alm_map_tools.cc  bluestein.c
swat/src/: TAlm.cxx  TAngDistance.cxx  TAuxFunc.cxx  TCoeffInfo.cxx  TCorrSelector.cxx  TCounterCRPropa.cxx  TDKernel.cxx  TEulerAngle.cxx  TMapSelector.cxx  TMapSelectorCRPropa.cxx  TShift.cxx  TSkyMap.cxx  TSlm.cxx  TSourcesFinder.cxx  TSphHarmB.cxx  TSphHarmF.cxx  TSwatF.cxx  TVMap.cxx  TWavMap.cxx  TWavelet.cxx  TWignerd.cxx
swat/swat/: TAngDistance.h  TSmallWignerd.h  TWavMap.h  TWavelet.h  TWignerd.h
swat/swat/healpix/: alm_map_tools.h
tests/: alm2map2alm.cxx  map2alm.C  parser.cxx
utils/src/: smfilter.cxx
